# tailcall-jq

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
benches/: bench_nom.rs  bench_pest.rs  bench_serde_json.rs  jaq.rs  json.pest  json_benches.rs
src/: lib.rs
src/jsonlike/: json_like.rs
src/mustache/: mod.rs  path.rs
tailcall-jq/: Cargo.toml
tailcall-jq/src/jsonlike/: json_like.rs  mod.rs
tailcall-jq/src/mustache/: parse.rs
tailcall-template/: CHANGELOG.md  Cargo.toml
tailcall-template/src/: lib.rs
tailcall-template/src/jq/: jq.rs  mod.rs
tailcall-template/src/jsonlike/: borrow.rs  graphql.rs  json_like.rs  serde.rs
tailcall-template/src/mustache/: eval.rs
tests/: ci.rs
