[package]
name = "jq"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde_json = "1.0.133"
async-graphql = "7.0.11"
async-graphql-value = "7.0.11"
indexmap = "2.6.0"
serde_json_borrow = "0.7.1"
nom = "8.0.0-alpha2"
anyhow = "1.0.93"

[dev-dependencies]
pretty_assertions = "1.4.1"
gh-workflow = "0.4.1"
tailcall-jq = { path = "tailcall-jq" }

[workspace]
members = ["tailcall-jq"]
