[package]
name = "jq"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde_json = "1.0.133"
async-graphql = "7.0.11"
async-graphql-value = "7.0.11"
indexmap = "2.6.0"
serde_json_borrow = "0.7.1"
nom = "8.0.0-alpha2"
anyhow = "1.0.93"

[dev-dependencies]
gh-workflow = "0.4.1"
pest = "2.7.14"
pest_derive = {version = "2.7.14"}
criterion = "0.5.1"
serde_json = "1.0.133"
nom = "8.0.0-alpha2"
pretty_assertions = "1.4.1"

[workspace]
members = ["tailcall-jq"]

[[bench]]
name = "json_benches"
harness = false
